welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: not found: value msg
	ecritMessage(msg: String);
                     ^